web-declarative.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-declarative
  annotations:
    site: blog

spec:
  containers:
    - name: web
      image: nginx
